--- a/css/style.css
+++ b/css/style.css
@@ -166,25 +166,25 @@ body {
       box-shadow: -1px 1px 13px 5px rgba(0, 0, 0, 0.56);
       transition: all 0.3s linear; }
       body .main__item:nth-child(1) {
-        animation: moveInRight 0.1s 1; }
+        animation: moveInRight 0.3s 1; }
         body .main__item:nth-child(1) a {
-          background-color: #5b6d51; }
+          background-color: #477af8; }
       body .main__item:nth-child(2) {
-        animation: moveInRight 0.1s 1; }
+        animation: moveInRight 0.3s 1; }
         body .main__item:nth-child(2) a {
-          background-color: #0f1652; }
+          background-color: #500789; }
       body .main__item:nth-child(3) {
-        animation: moveInRight 0.7s 1; }
+        animation: moveInRight 0.4s 1; }
         body .main__item:nth-child(3) a {
-          background-color: #40f34d; }
+          background-color: #bb3573; }
       body .main__item:nth-child(4) {
-        animation: moveInRight 0.6s 1; }
+        animation: moveInRight 0.5s 1; }
         body .main__item:nth-child(4) a {
-          background-color: #8cdafb; }
+          background-color: #46e540; }
       body .main__item:nth-child(5) {
-        animation: moveInRight 0.9s 1; }
+        animation: moveInRight 1s 1; }
         body .main__item:nth-child(5) a {
-          background-color: #6f017e; }
+          background-color: #ae4bd6; }
       body .main__item:hover {
         box-shadow: -1px 1px 13px 5px rgba(0, 0, 0, 0.76);
         transform: translateY(5px) scale(1.1);
