--- a/sass/pages/_chellange8.scss
+++ b/sass/pages/_chellange8.scss
@@ -1,9 +1,4 @@
 .challenge-8 {
-  .clearfix::after {
-    content: "";
-    display: table;
-    clear: both;
-  }
   body {
     color: #555;
     font-family: Open Sans;
@@ -13,25 +8,19 @@
     font-weight: 400;
   }
 
-  .right {
-    float: right;
-  }
   .red {
     color: #ff5049 !important;
-  }
-  .red-focus:focus {
-    border: 1px solid #ff5049 !important;
-  }
 
-  /**********************************************
-    *** TOP PART
-    **********************************************/
+    &-focus {
+      &:focus {
+        border: 1px solid #ff5049 !important;
+      }
+    }
+  }
 
   .top {
-    height: 40vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url(back.png);
-    background-size: cover;
-    background-position: center;
+    min-height: 400px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35));
     position: relative;
   }
 
@@ -42,157 +31,187 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color: #fff;
+
+    display: flex;
+    flex-direction: column;
+
+    &__title {
+      font-size: 18px;
+      text-align: center;
+      margin-bottom: 10px;
+      font-weight: 300;
+    }
+
+    &__value {
+      font-weight: 300;
+      font-size: 46px;
+      text-align: center;
+      margin-bottom: 25px;
+      letter-spacing: 2px;
+    }
+
+    &__income {
+      margin-bottom: 10px;
+      background-color: #28b9b5;
+    }
+
+    &__expenses {
+      background-color: #ff5049;
+
+      &--percentage {
+        background-color: rgba(255, 255, 255, 0.2);
+        text-align: center;
+        border-radius: 3px;
+      }
+    }
+
+    &__income,
+    &__expenses {
+      padding: 12px;
+      text-transform: uppercase;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+
+      &--text {
+        float: left;
+        font-size: 13px;
+        color: #444;
+        margin-top: 2px;
+      }
+
+      &--value {
+        letter-spacing: 1px;
+        float: left;
+      }
+
+      &--percentage {
+        float: left;
+        width: 34px;
+        font-size: 11px;
+        padding: 3px 0;
+        margin-left: 10px;
+      }
+    }
   }
 
-  .budget__title {
-    font-size: 18px;
-    text-align: center;
-    margin-bottom: 10px;
-    font-weight: 300;
-  }
-
-  .budget__value {
-    font-weight: 300;
-    font-size: 46px;
-    text-align: center;
-    margin-bottom: 25px;
-    letter-spacing: 2px;
-  }
-
-  .budget__income,
-  .budget__expenses {
-    padding: 12px;
-    text-transform: uppercase;
-  }
-
-  .budget__income {
-    margin-bottom: 10px;
-    background-color: #28b9b5;
-  }
-
-  .budget__expenses {
-    background-color: #ff5049;
-  }
-
-  .budget__income--text,
-  .budget__expenses--text {
-    float: left;
-    font-size: 13px;
-    color: #444;
-    margin-top: 2px;
-  }
-
-  .budget__income--value,
-  .budget__expenses--value {
-    letter-spacing: 1px;
-    float: left;
-  }
-
-  .budget__income--percentage,
-  .budget__expenses--percentage {
-    float: left;
-    width: 34px;
-    font-size: 11px;
-    padding: 3px 0;
-    margin-left: 10px;
-  }
-
-  .budget__expenses--percentage {
-    background-color: rgba(255, 255, 255, 0.2);
-    text-align: center;
-    border-radius: 3px;
-  }
-
-  /**********************************************
-    *** BOTTOM PART
-    **********************************************/
-
-  /***** FORM *****/
   .add {
     padding: 14px;
     border-bottom: 1px solid #e7e7e7;
     background-color: #f7f7f7;
+
+    &__container {
+      margin: 0 auto;
+      text-align: center;
+    }
+
+    &__type {
+      width: 55px;
+      border: 1px solid #e7e7e7;
+      height: 44px;
+      font-size: 18px;
+      color: inherit;
+      background-color: #fff;
+      margin-right: 10px;
+      font-weight: 300;
+      transition: border 0.3s;
+    }
+
+    &__description,
+    &__value {
+      border: 1px solid #e7e7e7;
+      background-color: #fff;
+      color: inherit;
+      font-family: inherit;
+      font-size: 14px;
+      padding: 12px 15px;
+      margin-right: 10px;
+      border-radius: 5px;
+      transition: border 0.3s;
+    }
+
+    &__description {
+      width: 400px;
+    }
+    &__value {
+      width: 100px;
+    }
+
+    &__btn {
+      font-size: 35px;
+      background: none;
+      border: none;
+      color: #28b9b5;
+      cursor: pointer;
+      display: inline-block;
+      vertical-align: middle;
+      line-height: 1.1;
+      margin-left: 10px;
+
+      &:active {
+        transform: translateY(2px);
+      }
+    }
+
+    &__type,
+    &__description,
+    &__value {
+      &:focus {
+        outline: none;
+        border: 1px solid #28b9b5;
+      }
+    }
+
+    &__btn:focus {
+      outline: none;
+    }
   }
 
-  .add__container {
-    margin: 0 auto;
-    text-align: center;
-  }
-
-  .add__type {
-    width: 55px;
-    border: 1px solid #e7e7e7;
-    height: 44px;
-    font-size: 18px;
-    color: inherit;
-    background-color: #fff;
-    margin-right: 10px;
-    font-weight: 300;
-    transition: border 0.3s;
-  }
-
-  .add__description,
-  .add__value {
-    border: 1px solid #e7e7e7;
-    background-color: #fff;
-    color: inherit;
-    font-family: inherit;
-    font-size: 14px;
-    padding: 12px 15px;
-    margin-right: 10px;
-    border-radius: 5px;
-    transition: border 0.3s;
-  }
-
-  .add__description {
-    width: 400px;
-  }
-  .add__value {
-    width: 100px;
-  }
-
-  .add__btn {
-    font-size: 35px;
-    background: none;
-    border: none;
-    color: #28b9b5;
-    cursor: pointer;
-    display: inline-block;
-    vertical-align: middle;
-    line-height: 1.1;
-    margin-left: 10px;
-  }
-
-  .add__btn:active {
-    transform: translateY(2px);
-  }
-
-  .add__type:focus,
-  .add__description:focus,
-  .add__value:focus {
-    outline: none;
-    border: 1px solid #28b9b5;
-  }
-
-  .add__btn:focus {
-    outline: none;
-  }
-
-  /***** LISTS *****/
   .container {
     width: 1000px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     margin: 60px auto;
+    text-align: center;
+
+    @media screen and (max-width: 1000px) {
+      width: 100%;
+      flex-direction: column;
+
+      .expenses,
+      .income {
+        width: 100%;
+      }
+    }
   }
 
   .income {
-    float: left;
     width: 475px;
     margin-right: 50px;
+
+    &__title {
+      color: #28b9b5;
+    }
+
+    .item__value,
+    .item__delete--btn {
+      color: #28b9b5;
+    }
   }
 
   .expenses {
-    float: left;
     width: 475px;
+
+    &__title {
+      color: #ff5049;
+    }
+
+    .item__value,
+    .item__percentage,
+    .item__delete--btn {
+      color: #ff5049;
+    }
   }
 
   h2 {
@@ -202,99 +221,82 @@
     margin-bottom: 15px;
   }
 
-  .icome__title {
-    color: #28b9b5;
-  }
-  .expenses__title {
-    color: #ff5049;
-  }
-
   .item {
     padding: 13px;
     border-bottom: 1px solid #e7e7e7;
-  }
+    display: flex;
+    justify-content: space-between;
 
-  .item:first-child {
-    border-top: 1px solid #e7e7e7;
-  }
-  .item:nth-child(even) {
-    background-color: #f7f7f7;
-  }
+    .right {
+      display: flex;
+    }
 
-  .item__description {
-    float: left;
-  }
+    &:first-child {
+      border-top: 1px solid #e7e7e7;
+    }
 
-  .item__value {
-    float: left;
-    transition: transform 0.3s;
-  }
+    &:nth-child(even) {
+      background-color: #f7f7f7;
+    }
 
-  .item__percentage {
-    float: left;
-    margin-left: 20px;
-    transition: transform 0.3s;
-    font-size: 11px;
-    background-color: #ffdad9;
-    padding: 3px;
-    border-radius: 3px;
-    width: 32px;
-    text-align: center;
-  }
+    &__value {
+      transition: transform 0.3s;
+    }
 
-  .income .item__value,
-  .income .item__delete--btn {
-    color: #28b9b5;
-  }
+    &__percentage {
+      margin-left: 20px;
+      transition: transform 0.3s;
+      font-size: 11px;
+      background-color: #ffdad9;
+      padding: 3px;
+      border-radius: 3px;
+      width: 32px;
+      text-align: center;
+    }
 
-  .expenses .item__value,
-  .expenses .item__percentage,
-  .expenses .item__delete--btn {
-    color: #ff5049;
-  }
+    &__delete {
+      display: none;
 
-  .item__delete {
-    float: left;
-  }
+      &--btn {
+        font-size: 22px;
+        background: none;
+        border: none;
+        cursor: pointer;
+        margin-left: 5px;
 
-  .item__delete--btn {
-    font-size: 22px;
-    background: none;
-    border: none;
-    cursor: pointer;
-    display: inline-block;
-    vertical-align: middle;
-    line-height: 1;
-    display: none;
-  }
+        vertical-align: middle;
+        line-height: 1;
 
-  .item__delete--btn:focus {
-    outline: none;
-  }
-  .item__delete--btn:active {
-    transform: translateY(2px);
-  }
+        &:focus {
+          outline: none;
+        }
 
-  .item:hover .item__delete--btn {
-    display: block;
-  }
-  .item:hover .item__value {
-    transform: translateX(-20px);
-  }
-  .item:hover .item__percentage {
-    transform: translateX(-20px);
+        &:active {
+          transform: translateY(2px);
+        }
+      }
+    }
+
+    &:hover {
+      .item__delete {
+        display: flex;
+      }
+    }
   }
 
   .unpaid {
     background-color: #ffdad9 !important;
     cursor: pointer;
     color: #ff5049;
-  }
 
-  .unpaid .item__percentage {
-    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1);
-  }
-  .unpaid:hover .item__description {
-    font-weight: 900;
+    .item__percentage {
+      box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1);
+    }
+
+    &:hover {
+      .item__description {
+        font-weight: 900;
+      }
+    }
   }
 }
