--- a/css/style.css
+++ b/css/style.css
@@ -166,25 +166,45 @@ body {
       box-shadow: -1px 1px 13px 5px rgba(0, 0, 0, 0.56);
       transition: all 0.3s linear; }
       body .main__item:nth-child(1) {
-        animation: moveInRight 0.9s 1; }
+        animation: moveInRight 0.7s 1; }
         body .main__item:nth-child(1) a {
-          background-color: #e9d238; }
+          background-color: #d2ce7e; }
       body .main__item:nth-child(2) {
-        animation: moveInRight 0.9s 1; }
+        animation: moveInRight 0.7s 1; }
         body .main__item:nth-child(2) a {
-          background-color: #87ef1f; }
+          background-color: #5787f7; }
       body .main__item:nth-child(3) {
-        animation: moveInRight 0.6s 1; }
+        animation: moveInRight 0.3s 1; }
         body .main__item:nth-child(3) a {
-          background-color: #dc5843; }
+          background-color: #490b99; }
       body .main__item:nth-child(4) {
-        animation: moveInRight 0.2s 1; }
+        animation: moveInRight 0.6s 1; }
         body .main__item:nth-child(4) a {
-          background-color: #31de5d; }
+          background-color: #eccc45; }
       body .main__item:nth-child(5) {
-        animation: moveInRight 0.9s 1; }
+        animation: moveInRight 0.1s 1; }
         body .main__item:nth-child(5) a {
-          background-color: #4fa127; }
+          background-color: #39a53f; }
+      body .main__item:nth-child(6) {
+        animation: moveInRight 0.5s 1; }
+        body .main__item:nth-child(6) a {
+          background-color: #d9c631; }
+      body .main__item:nth-child(7) {
+        animation: moveInRight 0.7s 1; }
+        body .main__item:nth-child(7) a {
+          background-color: #8b2d0e; }
+      body .main__item:nth-child(8) {
+        animation: moveInRight 0.9s 1; }
+        body .main__item:nth-child(8) a {
+          background-color: #3e3883; }
+      body .main__item:nth-child(9) {
+        animation: moveInRight 0.6s 1; }
+        body .main__item:nth-child(9) a {
+          background-color: #5ce8eb; }
+      body .main__item:nth-child(10) {
+        animation: moveInRight 0.7s 1; }
+        body .main__item:nth-child(10) a {
+          background-color: #f4c8d2; }
       body .main__item:hover {
         box-shadow: -1px 1px 13px 5px rgba(0, 0, 0, 0.76);
         transform: translateY(5px) scale(1.1);
